Dodano konwersje jednostek w sprawdzaniu składników

--- a/recipes/templates/recipes/recipe_list.html
+++ b/recipes/templates/recipes/recipe_list.html
@@ -1,7 +1,10 @@
 <h2>Twoje przepisy</h2>
 <ul>
     {% for recipe in recipes %}
-        <li>{{ recipe.name }} - {{ recipe.category }} ({{ recipe.portions }} porcji)</li>
+        <li>
+            {{ recipe.name }} - {{ recipe.category }} ({{ recipe.portions }} porcji)
+            <a href="{% url 'check_ingredients' recipe.id %}">Sprawdź składniki</a>
+        </li>
     {% empty %}
         <li>Brak przepisów.</li>
     {% endfor %}
