--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -1,4 +1,9 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h2>Witaj na swoim dashboardzie!</h2>
 <p>Jesteś zalogowany jako: {{ user.username }}</p>
 <a href="{% url 'logout' %}">Wyloguj się</a>
 
+{% endblock %}
