--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,6 +1,12 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h2>Rejestracja</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Zarejestruj</button>
 </form>
+
+{% endblock %}
