--- a/fridge/templates/fridge/confirm_delete_item.html
+++ b/fridge/templates/fridge/confirm_delete_item.html
@@ -1,6 +1,11 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h2>Czy na pewno chcesz usunąć produkt "{{ item.name }}"?</h2>
 <form method="post">
     {% csrf_token %}
     <button type="submit">Tak, usuń</button>
 </form>
 <a href="{% url 'fridge_list' %}">Anuluj</a>
+{% endblock %}
