--- a/fridge/templates/fridge/edit_item.html
+++ b/fridge/templates/fridge/edit_item.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h2>Edytuj produkt</h2>
 <form method="post">
     {% csrf_token %}
@@ -5,3 +9,4 @@
     <button type="submit">Zapisz zmiany</button>
 </form>
 <a href="{% url 'fridge_list' %}">Anuluj</a>
+{% endblock %}
