--- a/fridge/templates/fridge/fridge_list.html
+++ b/fridge/templates/fridge/fridge_list.html
@@ -1,7 +1,11 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h2>Twoja lodówka</h2>
 <ul>
     {% for item in items %}
-        <<li>{{ item.name }} - {{ item.quantity }} {{ item.unit }} 
+        <li>{{ item.name }} - {{ item.quantity }} {{ item.unit }} 
             (ważność do: {{ item.expiry_date|default:"brak" }})
             <a href="{% url 'edit_fridge_item' item.id %}">Edytuj</a> |
             <a href="{% url 'delete_fridge_item' item.id %}">Usuń</a>
@@ -9,3 +13,4 @@
     {% endfor %}
 </ul>
 <a href="{% url 'add_fridge_item' %}">Dodaj produkt</a>
+{% endblock %}
