--- a/recipes/templates/recipes/shopping_list.html
+++ b/recipes/templates/recipes/shopping_list.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h2>Lista zakupów dla przepisu: {{ recipe.name }}</h2>
 
 {% if shopping_list %}
@@ -25,3 +29,6 @@ function copyToClipboard() {
     });
 }
 </script>
+
+
+{% endblock %}
