Dodano edycję przepisów i widok szczegółowy przepisu

--- a/recipes/templates/recipes/recipe_list.html
+++ b/recipes/templates/recipes/recipe_list.html
@@ -5,7 +5,8 @@
 <h2>Twoje przepisy</h2>
 <ul>
     {% for recipe in recipes %}
-    <li>{{ recipe.name }} - {{ recipe.category }} ({{ recipe.portions }} porcji)
+    <li>
+        <a href="{% url 'recipe_detail' recipe.id %}">{{ recipe.name }}</a> - {{ recipe.category }} ({{ recipe.portions }} porcji)
         <a href="{% url 'check_ingredients' recipe.id %}">Sprawdź składniki</a> |
         <a href="{% url 'scale_recipe' recipe.id %}">Skaluj</a> |
         <a href="{% url 'generate_shopping_list' recipe.id %}">Lista zakupów</a> |
