--- a/recipes/templates/recipes/add_recipe.html
+++ b/recipes/templates/recipes/add_recipe.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 <h2>Dodaj nowy przepis</h2>
-<form method="post">
+<form method="post" enctype="multipart/form-data">
+
     {% csrf_token %}
     {{ form.as_p }}
 
