--- a/recipes/templates/recipes/recipe_list.html
+++ b/recipes/templates/recipes/recipe_list.html
@@ -6,6 +6,14 @@
 <ul>
     {% for recipe in recipes %}
     <li>
+        {% if recipe.is_vegan %}
+    [🌱 Wegan]
+{% elif recipe.is_vegetarian %}
+    [🥗 Wegetariański]
+{% else %}
+    [🍗 Mięsny]
+{% endif %}
+
         <a href="{% url 'recipe_detail' recipe.id %}">{{ recipe.name }}</a> - {{ recipe.category }} ({{ recipe.portions }} porcji)
         <a href="{% url 'check_ingredients' recipe.id %}">Sprawdź składniki</a> |
         <a href="{% url 'scale_recipe' recipe.id %}">Skaluj</a> |
