--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,4 +3,5 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Zaloguj</button>
+    <a href="{% url 'password_reset' %}">Nie pamiętasz hasła?</a>
 </form>
