Zapis projektu na koniec dnia - reorganizacja listy zakupów do poprawy

--- a/recipes/templates/recipes/check_ingredients.html
+++ b/recipes/templates/recipes/check_ingredients.html
@@ -5,15 +5,19 @@
 <h2>Sprawdzenie składników dla: {{ recipe.name }}</h2>
 
 {% if missing_ingredients %}
-    <p>Brakuje lub jest niezgodność dla następujących składników:</p>
+    <p>Brakuje lub masz za mało następujących składników:</p>
     <ul>
         {% for item in missing_ingredients %}
             <li>{{ item }}</li>
         {% endfor %}
     </ul>
+    <p>Brakujące składniki zostały automatycznie dodane do <a href="{% url 'shopping_list' %}">Twojej listy zakupów</a>.</p>
+    <a href="{% url 'shopping_list' %}">Przejdź do listy zakupów</a>
 {% else %}
     <p>Masz wszystkie składniki! Możesz zrobić ten przepis.</p>
 {% endif %}
 
 <a href="{% url 'recipe_list' %}">Wróć do listy przepisów</a>
+<a href="{% url 'recipe_detail' recipe.id %}">Zobacz przepis</a>
+
 {% endblock %}
