--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         </label>
         <button type="submit">Szukaj</button>
     </form>
-    
+    <a href="{% url 'shopping_list' %}">🛒 Lista zakupów</a>
     <a href="{% url 'logout' %}">Wyloguj</a>
 </nav>
 {% if messages %}
