--- a/fridge/templates/fridge/fridge_list.html
+++ b/fridge/templates/fridge/fridge_list.html
@@ -7,10 +7,10 @@
     {% for item in items %}
         <li>{{ item.name }} - {{ item.quantity }} {{ item.unit }} 
             (ważność do: {{ item.expiry_date|default:"brak" }})
-            <a href="{% url 'edit_fridge_item' item.id %}">Edytuj</a> |
-            <a href="{% url 'delete_fridge_item' item.id %}">Usuń</a>
+            <a href="{% url 'fridge:edit' item.id %}">Edytuj</a> |
+            <a href="{% url 'fridge:delete' item.id %}">Usuń</a>
         </li>
     {% endfor %}
 </ul>
-<a href="{% url 'add_fridge_item' %}">Dodaj produkt</a>
+<a href="{% url 'fridge:add' %}">Dodaj produkt</a>
 {% endblock %}
